# genai-skills-workshop-strause

./: .gitignore  README.md  challenge_1.ipynb  challenge_2.ipynb  challenge_3.ipynb
challenge_5/: .env.example  .gitignore  README.md  architecture.md  local_run.py  pyproject.toml
challenge_5/ads_agent/: agent.py  callbacks.py  config.py  observability.py  remote.py  safety.py  tools.py
challenge_5/eval/: eval_dataset.json  run_eval.py
challenge_5/frontend/: app.py
challenge_5/scripts/: 00_enable_apis.sh  01_stage_data.sh  02_create_rag_corpus.py  03_create_model_armor.py  04_deploy_agent_engine.py  05_grant_agent_permissions.sh
challenge_5/tests/: test_callbacks.py  test_safety.py  test_tools.py
